Adiciona botão para gerar cores aleatórias
Signed-off-by: Marlon Couto <marloncouto199@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   </head>
   <body>
     <h1 id="title">Paleta de Cores</h1>
+    <button id="button-random-color">Cores aleatórias</button>
+    <br />
     <div id="color-palette">
       <div class="color" id="black"></div>
-      <div class="color" id="red"></div>
-      <div class="color" id="green"></div>
-      <div class="color" id="blue"></div>
+      <div class="color"></div>
+      <div class="color"></div>
+      <div class="color"></div>
     </div>
     <script src="script.js"></script>
   </body>
