--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <div class="color"></div>
       <div class="color"></div>
     </div>
+    <br />
+    <div id="pixel-board"></div>
     <script src="script.js"></script>
   </body>
 </html>
