--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1 id="title">Paleta de Cores</h1>
     <button id="button-random-color">Cores aleatórias</button>
     <div id="color-palette">
-      <div class="color" id="black"></div>
+      <div class="color"></div>
       <div class="color"></div>
       <div class="color"></div>
       <div class="color"></div>
