Refatora algumas funções, implementa botão para limpar o quadro de pixels
Signed-off-by: Marlon Couto <marloncouto199@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   </head>
   <body>
     <h1 id="title">Paleta de Cores</h1>
-    <button id="button-random-color">Cores aleatórias</button>
     <div id="color-palette">
       <div class="color"></div>
       <div class="color"></div>
       <div class="color"></div>
       <div class="color"></div>
     </div>
+    <button id="button-random-color">Cores aleatórias</button>
+    <button id="clear-board">Limpar</button>
     <br />
     <div id="pixel-board"></div>
     <script src="script.js"></script>
