--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <button id="button-random-color">Cores aleatórias</button>
     <button id="clear-board">Limpar</button>
     <br />
-    <div id="pixel-board"></div>
+    <input id="board-size" />
+    <br />
+    <div id="pixel-board" placeholder=""></div>
     <script src="script.js"></script>
   </body>
 </html>
