--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <button id="button-random-color">Cores aleatórias</button>
     <button id="clear-board">Limpar</button>
     <br />
-    <input id="board-size" />
+    <input id="board-size" placeholder="Insira o tamanho do quadro" type="number" min="1"/>
+    <button id="generate-board">VQV</button>
     <br />
-    <div id="pixel-board" placeholder=""></div>
+    <div id="pixel-board"></div>
     <script src="script.js"></script>
   </body>
 </html>
